--- a/attendance_service/render.yaml
+++ b/attendance_service/render.yaml
@@ -5,11 +5,15 @@ services:
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app
     envVars:
+      - key: PYTHON_VERSION
+        value: 3.9.0
+      - key: PORT
+        value: 5003
       - key: FLASK_ENV
         value: production
       - key: STUDENT_SERVICE_URL
-        value: your-student-service-url
+        value: https://student-service.onrender.com
       - key: LECTURE_SERVICE_URL
-        value: your-lecture-service-url
+        value: https://lecture-service.onrender.com
       - key: CLASS_SERVICE_URL
-        value: your-class-service-url 
+        value: https://class-service.onrender.com 
