--- a/student_service/requirements.txt
+++ b/student_service/requirements.txt
@@ -3,4 +3,5 @@ werkzeug==2.0.3
 flask-sqlalchemy==2.5.1
 flask-cors==3.0.10
 gunicorn==20.1.0
-python-dotenv==0.19.0 
+python-dotenv==0.19.0
+requests==2.31.0 
