--- a/attendance_service/render.yaml
+++ b/attendance_service/render.yaml
@@ -12,8 +12,8 @@ services:
       - key: FLASK_ENV
         value: production
       - key: STUDENT_SERVICE_URL
-        value: https://student-service.onrender.com
+        value: https://student-service-8gyd.onrender.com
       - key: LECTURE_SERVICE_URL
         value: https://lecture-service.onrender.com
       - key: CLASS_SERVICE_URL
-        value: https://class-service.onrender.com 
+        value: https://class-service-kacm.onrender.com 
